# dpf-starter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
plugins/TanDist/: CMakeLists.txt  DistrhoPluginInfo.h  TanDist.cpp  TanDistParameters.h  TanDistUI.cpp  TanDistUI.hpp  makefile
